# cogniro

./: .coderabbit.yaml  .dockerignore  .gitignore  .prettierrc  README.md  docker-compose.yml  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.claude/skills/: ty
.cursor/commands/: commit.md  pr.md
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
app/: layout.tsx
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  admin_quiz_service.py  main.py  media_asset_service.py  models.py  pyproject.toml  quiz_results_service.py  settings.py  storage_service.py
backend/routes/: admin_auth.py  admin_quiz.py  nick.py  stubs.py  user.py
backend/schemas/: admin_auth.py  admin_quiz.py  common.py  nick.py  user.py
backend/scripts/: hash_admin_password.py
backend/security/: __init__.py  admin_auth.py
backend/tests/: __init__.py  auth_test_constants.py  conftest.py  test_admin_auth.py  test_admin_quiz_assets.py  test_cors.py  test_hash_admin_password_helper.py  test_quiz_results.py  test_user_schema.py  test_validate_nick.py
docs/: docs.md
frontend/: .env.example  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  docs.md  eslint.config.mjs  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: AdminDashboard.tsx  AdminLogin.tsx  page.tsx
frontend/app/data/: demo.ts
frontend/app/demo/: page.tsx
frontend/lib/: backend-url.test.ts  backend-url.ts  media-url.ts
pencil/: user_stories.md  widoki.pen  widoki2.pen
(+76 files in other folders)
