[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "pillow>=11.2.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
